styles/global.scss
@import "../node_modules/bootstrap/scss/bootstrap";
@import "card";
@import "button";
@import "listgroup";
@import "navbar";

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*:before,
*:after {
  box-sizing: inherit;
  padding: 0;
  margin: 0;
}

body {
  font-family: "Lato", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  scroll-snap-type: y mandatory;
  -webkit-overflow-scrolling: touch;
  overflow-y: auto;
  overflow-x: hidden;
}

main {
  margin: 0 auto;
}

section {
  min-height: 100vh;
  scroll-snap-align: start;
  margin-bottom: 5rem;
}

.bg-transparent {
  background-color: transparent;
}

img {
  display: block;
}

.anchor > span {
  display: block;
  position: relative;
  top: -5rem;
  visibility: hidden;
}

.mobile-full {
  @media (max-width: map-get($map: $grid-breakpoints, $key: md)) {
    width: 100%;
  }
}

.show-desktop {
  display: none;
  @media (min-width: map-get($map: $grid-breakpoints, $key: lg )) {
    display: block;
  }
}

.show-tablet {
  display: none;
  @media only screen and (min-width: map-get($map: $grid-breakpoints, $key: xs )) and (max-width: map-get($map: $grid-breakpoints, $key: lg )) {
    display: block;
  }
}

.show-mobile {
  @media (max-width: map-get($map: $grid-breakpoints, $key: xs )) {
    display: none;
  }
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

.row-alternating {
  &:nth-child(odd) {
    flex-direction: row-reverse;
  }
}

.pointer {
  cursor: pointer;
}

.hero-title {
  font-size: clamp(1rem, -0.875rem + 8.333vw, 2.5rem);
}

